--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,15 @@
     "version": 2,
     "builds": [
         {
-            "src": "*.js","use":"@vercel/node"
+            "src": "index.js",
+            "use":"@now/node"
         }
     ],
     "routes":[
         {
             "src":"/(.*)",
-            "dest": "/"
+            "dest": "index.js",
+            "methods": ["GET","POST","PUT","PATCh","DELETE","OPTIONS"]
         }
     ]
 }
